@@ -1,3 +1,5 @@
+  * renamed executable 'newrelic_cmd' to 'newrelic'; old name still supported
+    for backward compatibility
 v2.12.0
   * support basic instrumentation for ActsAsSolr and Sunspot
 
